--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@ alt="hits counter"></a></div></noscript>
 
 <p>For this assessment, we figured that the 8 bit graphics we were provided with in the previous game just didn't quite cut it.  So, during our many 'idea and design' sessions, after pouring over a whiteboard for hours and hours, we came up with the innovative solution of adding 1 extra bit of colorus - so we now have 9-bit colour!</p>
 
-<p><i>Insert humorous quip here about MH370, similar to before, when we had "Obviously aeroplanes don't go to space or water unless the pilot is a moron".</i>  See old site.</p>
-
-<!--<p><i>Insert theatrical introduction trailer here</i></p>-->
-<!--640 * 360-->
+<iframe width="640" height="360" src="//www.youtube.com/embed/zRbsD_DIPKc?vq=hd1080" frameborder="0" allowfullscreen></iframe>
 
 <div style="height: 200px; width: 50%; float:left;"><a href="resources/ss1.png"><img width=100% src="resources/ss1.png"></a> </div>
 <div style="height: 200px; width: 50%; float:right;"><a href="resources/ss2.png"><img width=100% src="resources/ss2.png"></a> </div>
