--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ alt="hits counter"></a></div></noscript>
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
-<p>Welcome to Flighty Mk. 2. Although the original version was great, we've added countless improvements to optimise performance of the game, new features including online multiplayer and a whole extra bit of colours.  Take a look below and download Flighty Mk. 2 to try it.</p>
+<p>Welcome to Flighty Mk. 2. Although the original version was great, we've added countless improvements to optimise performance of the game, new features including online multiplayer and a parallax effect powered by the position of your face (using face tracking) and a whole extra bit of colours.  Take a look below and download Flighty Mk. 2 to try it.</p>
 
 <p>For this assessment, we figured that the 8 bit graphics we were provided with in the previous game just didn't quite cut it.  So, during our many 'idea and design' sessions, after pouring over a whiteboard for hours and hours, we came up with the innovative solution of adding 1 extra bit of colorus - so we now have 9-bit colour!</p>
 
@@ -80,13 +80,11 @@ alt="hits counter"></a></div></noscript>
 <p>
 	<ul>
 		<li>Complete Traceability</li>
-		<li>Original code was very stable, but poorly structured - initially, we had to refactor massive 1000 line classes and 800 line methods.  Now the structure is super clear and easy to maintain.  Throughout the refactoring, we only came across one significant bug, which was invisible to the player and was simple to fix.</li>
+		<li>Original code was very stable, but poorly structured - initially, we had to refactor massive 1000 line classes and 800 line methods.  Now the structure is super clear and easy to maintain.</li>
 		<li>Super well structured networked multiplayer - we constructed a server from scratch in Haskell to pass byte-strings, where of these is defined as a message type, and a client in Java, also containing these pre-configured byte-strings.  Simply call a one line method to send any parameter or object to the other player or the server</li>
 		<li>Fully Documented, so you have endless comments to trawl through before you find actual code.</li>
 	</ul>
 </p>
-
-<h2><a class="anchor" href="resources/TestAndDesignDocs.zip">See all our design and testing here</a></h2>
 
 <h3><a name="simpleanddocumented" class="anchor" href="#simpleanddocumented"><span class="octicon octicon-link"></span></a>
 Easy to Understand - The only thing left to document is the documentation itself.</h3>
