moved things around

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@ alt="hits counter"></a></div></noscript>
 <div style="height: 200px; width: 50%; float:right;"><a href="resources/ss4.png"><img width=100% src="resources/ss4.png"></a> </div>
 <BR>&nbsp;<BR>
 
+<h3><a name="why" class="anchor" href="#eggs"><span class="octicon octicon-link"></span></a>Why play our game?</h3>
+<p>
+	<ul>
+		<li>Single player unlock system</li>
+		<li>Multiplayer is consistently played on the left</li>
+		<li>Face-tracking parallax</li>
+		<li>Buyable items to make your opponent's game harder</li>
+	</ul>
+</p>
+
 <h3><a name="techspecs" class="anchor" href="#techspecs"><span class="octicon octicon-link"></span></a>Tech Specs</h3>
 
 <p>
@@ -95,15 +105,6 @@ Easy to Understand - The only thing left to document is the documentation itself
 	<img src="images/code.png" width="95%"></img>
 </div>
 
-</p>
-
-<h3><a name="why" class="anchor" href="#eggs"><span class="octicon octicon-link"></span></a>Why play our game?</h3>
-<p>
-	<ul>
-		<li>No snakes on a plane</li>
-		<li>No snakes on a shuttle</li>
-		<li>No sharks in the water</li>
-	</ul>
 </p>
 
 <h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Still got Questions?</h3>
