--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ alt="hits counter"></a></div></noscript>
 
 <p>Welcome to Flighty Mk. 2. Although the original version was great, we've added countless improvements to optimise performance of the game, new features including online multiplayer and a parallax effect powered by the position of your face (using face tracking) and a whole extra bit of colours.  Take a look below and download Flighty Mk. 2 to try it.</p>
 
-<p>For this assessment, we figured that the 8 bit graphics we were provided with in the previous game just didn't quite cut it.  So, during our many 'idea and design' sessions, after pouring over a whiteboard for hours and hours, we came up with the innovative solution of adding 1 extra bit of colorus - so we now have 9-bit colour!</p>
+<p>For this assessment, we figured that the 8 bit graphics we were provided with in the previous game just didn't quite cut it.  So, during our many 'idea and design' sessions, after pouring over a whiteboard for hours and hours, we came up with the innovative solution of adding 1 extra bit of colour - so we now have 9-bit colour!</p>
 
 <div style="height: 200px; width: 50%; float:left;"><a href="resources/ss1.png"><img width=100% src="resources/ss1.png"></a> </div>
 <div style="height: 200px; width: 50%; float:right;"><a href="resources/ss2.png"><img width=100% src="resources/ss2.png"></a> </div>
